Update helper text in listing_create_form.html

--- a/listings/templates/listings/listing_create_form.html
+++ b/listings/templates/listings/listing_create_form.html
@@ -241,7 +241,7 @@
       {{ listing_media_form.image.errors }}
       <div class="form-tip">
         <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
-          <span>Our users love lots of clear images. You can upload up to 20 images per listing.</span>
+          <span>Our users love lots of clear images, generate more interest with more pictures.</span>
       </div>
     </div>
     <button type="submit">Add to NextBoat</button>
