--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -14,6 +14,9 @@
     padding: 24px 16px;
     border-radius: 16px;
 }
+#create-message-flex {
+    margin-top: 0;
+}
 #message-back {
     margin-top: 16px;
     font-size: 16px;
@@ -59,6 +62,10 @@
     padding: 0px 8px 8px 8px;
     margin-bottom: 16px;
     box-sizing: border-box;
+}
+#create-cont {
+    margin-bottom: 0;
+    padding:  0px 8px 0px 8px;
 }
 .conversation-bubbles {
     position: relative;
@@ -157,7 +164,7 @@ button {
 #submit-icon {
     height: 16px;
     width: auto;
-    margin: 0 4px;
+    transform: translateY(2px)
 }
 button:disabled {
     background-color: #bebebe !important;
