Add image upload functionality to listing_edit_images

--- a/listings/templates/listings/listing_edit_images.html
+++ b/listings/templates/listings/listing_edit_images.html
@@ -12,7 +12,7 @@
     <h1>{{ listing.get_make_display }} {{ listing.model }} Images</h1>
     <h3>Delete Images</h3>
     <div id="existing-images-flex">
-        {% if listings_list %}
+        {% if listing_images %}
         {% for image in listing_images %}
         <a href="{% url 'delete_image' image.pk %}">
             <div class="existing-image-cont">
@@ -27,7 +27,18 @@
        <h3>There are no images to be deleted.</h3>
        {% endif %}
     </div>
-    <h3>AddImages</h3>
+    <form method="post" id="create-form" enctype="multipart/form-data">
+        {% csrf_token %}
+        <label><h3>Add Images</h3></label>
+            <div id="form-cont">
+            {{ listing_media_form.image }}
+            {{ listing_media_form.image.errors }}
+            <div class="form-tip">
+                <image alt="" src="{% static 'images/information_icon.svg' %}"></image>
+                <span>Our users love lots of clear images, generate more interest with more pictures.</span>
+            </div>
+            <button type="submit">Add Images</button>
+        </form>
 </main>
 {% else %}
 <main>
