--- a/listings/templates/listings/listing_edit_images.html
+++ b/listings/templates/listings/listing_edit_images.html
@@ -9,6 +9,7 @@
 {% block content %}
 {% if listing.created_by|stringformat:"s" == user.username %}
 <main>
+    <a href="{% url 'my_listings' %}" id="message-back"><img src="https://nextboat-ci-static.s3.eu-west-2.amazonaws.com/static/images/return_icon.svg" alt="Back to My Listings">My Listings</a>
     <h1>{{ listing.get_make_display }} {{ listing.model }} Images</h1>
     <h3>Delete Images</h3>
     <div id="existing-images-flex">
