Fix template tag error in 404.html and 500.html

--- a/templates/500.html
+++ b/templates/500.html
@@ -4,7 +4,7 @@
 <title>Error couldn't be found</title>
 {% endblock %}
 
-{% content block %}
+{% block content %}
 <main>
     <h1>500</h1>
 </main>
