--- a/static/css/listings.css
+++ b/static/css/listings.css
@@ -1,23 +1,24 @@
 /* This stylesheet styles listings.html, which shows the available boats on the site */
-.listing-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: auto;
-    grid-row-gap: 12px;
-    margin-top: 16px;
-    place-items: center;
+.listing-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 16px;
 }
 .boat-listing-cont {
-    width: 100%;
-    max-width: 304px;
-    min-width: 280px;
+    width: 30%;
+    max-width: 380px;
     position: relative;
-    margin: 8px;
+    margin: 12px 8px;
     background-color: var(--white);
     border-radius: 16px;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.16);
     -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.16);
     box-sizing: border-box;
+}
+.boat-listing-cont:hover {
+    background-color: var(--light-bg-grey);
 }
 .boat-listing-cont a {
     width: 100%;
@@ -26,7 +27,6 @@
 }
 .boat-listing-item {
     width: 100%;
-    max-width: 304px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -116,4 +116,20 @@
     font-weight: var(--semibold);
     color: var(--off-black);
     line-height: 20px;
+}
+
+@media screen and (max-width: 820px) {
+    .boat-listing-cont {
+        width: 30%;
+    }
+}
+@media screen and (max-width: 819px) {
+    .boat-listing-cont {
+        width: 45%;
+    }
+}
+@media screen and (max-width: 609px) {
+    .boat-listing-cont {
+        width: 100%;
+    }
 }
