--- a/static/css/favourites.css
+++ b/static/css/favourites.css
@@ -40,12 +40,14 @@
     margin: 24px auto;
 }
 #no-favourites-cont span {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: var(--medium);
     color: var(--medium-grey);
     display: inline-block;
     margin: 8px auto;
     line-height: 28px;
+    text-align: center;
+    max-width: 500px;
 }
 /* Styles for when there are favourites */
 .favourite-item-cont {
@@ -60,10 +62,6 @@
     background-color: var(--white);
     box-sizing: border-box;
     justify-content: space-between;
-    cursor: pointer;
-}
-.favourite-item-cont:hover {
-    background-color: var(--light-bg-grey);
 }
 .favourite-text-img {
     height: auto;
@@ -73,6 +71,8 @@
 }
 .favourite-item-cont a {
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 .favourite-text-img span {
     font-size: 20px;
@@ -80,6 +80,9 @@
     font-weight: var(--semibold);
     text-decoration: none;
     display: inline-block;
+}
+.favourite-text-img:hover span {
+    text-decoration: underline;
 }
 .favourite-item-image {
     height: 48px;
