Add id to img element in 404.html, 500.html

--- a/templates/404.html
+++ b/templates/404.html
@@ -7,9 +7,7 @@
 {% block content %}
 <main>
     <h1>Couldn't be found (404)</h1>
-    <br>
-    <img src="{% static 'images/binoculars.svg' %}" alt="Binoculars" width="120px" height="auto">
-    <br>
+    <img src="{% static 'images/binoculars.svg' %}" id="error-img" alt="Binoculars" width="120px" height="auto">
     <h3>The page you were looking for couldn't be found.</h3>
     <br>
 </main>
