--- a/templates/500.html
+++ b/templates/500.html
@@ -7,8 +7,6 @@
 {% block content %}
 <main>
     <h1>An Internal Server Error has occured (Error 500)</h1>
-    <br>
-    <img src="{% static 'images/warning.svg' %}" alt="Binoculars" width="72px" height="auto">
-    <br>
+    <img src="{% static 'images/warning.svg' %}" id="error-img" alt="Binoculars" width="72px" height="auto">
 </main>
 {% endblock %}
